# DjangoPrac

Learnboostback/: manage.py  pyproject.toml
Learnboostback/learnboostapp/: apps.py  mongo_connection.py
Learnboostback/learnboostprojrct/: asgi.py  settings.py  urls.py  wsgi.py
