[tool.poetry]
name = "learnboostback"
version = "0.1.0"
description = ""
authors = ["yash"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.4"
pymongo = "^4.5.0"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
